Re-Adding CreativeGates support and adding to repo.

--- a/MassiveSuper/pom.xml
+++ b/MassiveSuper/pom.xml
@@ -4,7 +4,8 @@
     <!-- Basics -->
     <groupId>com.massivecraft.massivesuper</groupId>
     <artifactId>MassiveSuper</artifactId>
-    <version>3.4.0-ALPHA1</version>
+    <!-- Change this release version when making updates to the code - update in all pom files -->
+    <version>3.4.0-alpha-2</version>
     <packaging>pom</packaging>
 
     <!-- Info -->
