--- a/Factions/pom.xml
+++ b/Factions/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.massivecraft.massivesuper</groupId>
         <artifactId>MassiveSuper</artifactId>
-        <version>3.4.0-ALPHA1</version>
+        <version>3.4.0-alpha-2</version>
         <relativePath>../MassiveSuper</relativePath>
     </parent>
 
