--- a/MassiveSuper/pom.xml
+++ b/MassiveSuper/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.massivecraft.massivesuper</groupId>
     <artifactId>MassiveSuper</artifactId>
     <!-- Change this release version when making updates to the code - update in all pom files -->
-    <version>3.4.0-alpha-3</version>
+    <version>3.4.0-alpha-4</version>
     <packaging>pom</packaging>
 
     <!-- Info -->
@@ -21,7 +21,7 @@
         <massiveColorInfo>${massiveColorSign}e</massiveColorInfo>
         <massiveColorBold>${massiveColorSign}a</massiveColorBold>
         <massiveColorLink>${massiveColorSign}b</massiveColorLink>
-        <massiveBaseUrl>https://massivecraft.com</massiveBaseUrl>
+        <massiveBaseUrl>https://jeremyfail.dev/projects/plugins</massiveBaseUrl>
         <massiveDescriptionSuffix></massiveDescriptionSuffix>
 
         <!-- Core Versions -->
@@ -77,6 +77,12 @@
 
         <!-- http://repo.mikeprimm.com/us/dynmap/dynmap/ -->
         <massiveDynmapVersion>3.7-beta8</massiveDynmapVersion>
+        
+        <!-- https://nexus.scarsz.me/content/groups/public/com/discordsrv/discordsrv/ -->
+        <massiveDiscordSrvVersion>1.20.0</massiveDiscordSrvVersion>
+        
+        <!-- https://ci.ender.zone/plugin/repository/everything/net/ess3/EssentialsX/ -->
+        <massiveEssentialsVersion>2.16.1</massiveEssentialsVersion>
 
         <!-- ~~~~~~~~~~~~~~~ -->
         <!-- Custom Versions -->
@@ -126,6 +132,16 @@
         <repository>
             <id>howaner-repo</id>
             <url>http://repo.howaner.de/</url>
+        </repository>
+        <!-- DiscordSRV -->
+        <repository>
+            <id>Scarsz-Nexus</id>
+            <url>https://nexus.scarsz.me/content/groups/public/</url>
+        </repository>
+        <!-- Essentials -->
+        <repository>
+            <id>ess-repo</id>
+            <url>https://ci.ender.zone/plugin/repository/everything/</url>
         </repository>
         <!-- Commodore/Brigadier
         <repository>
@@ -294,6 +310,138 @@
                 <version>${massiveVaultVersion}</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+	            <groupId>com.discordsrv</groupId>
+	            <artifactId>discordsrv</artifactId>
+	            <version>${massiveDiscordSrvVersion}</version>
+	            <scope>provided</scope>
+	            <exclusions>
+			        <exclusion>
+			          <artifactId>JDA</artifactId>
+			          <groupId>net.dv8tion</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>nv-websocket-client</artifactId>
+			          <groupId>com.neovisionaries</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>trove4j</artifactId>
+			          <groupId>net.sf.trove4j</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>configuralize</artifactId>
+			          <groupId>github.scarsz</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>slf4j-jdk14</artifactId>
+			          <groupId>org.slf4j</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>commons-io</artifactId>
+			          <groupId>commons-io</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>commons-collections</artifactId>
+			          <groupId>commons-collections</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>commons-lang3</artifactId>
+			          <groupId>org.apache.commons</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>commons-codec</artifactId>
+			          <groupId>commons-codec</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>emoji-java</artifactId>
+			          <groupId>com.vdurmont</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>java-semver</artifactId>
+			          <groupId>com.github.zafarkhaja</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>http-request</artifactId>
+			          <groupId>com.github.kevinsawicki</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>minidns-hla</artifactId>
+			          <groupId>org.minidns</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>reflections</artifactId>
+			          <groupId>org.reflections</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>spring-expression</artifactId>
+			          <groupId>org.springframework</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>MCDiscordReserializer</artifactId>
+			          <groupId>dev.vankka</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>text-api</artifactId>
+			          <groupId>net.kyori</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>text-serializer-legacy</artifactId>
+			          <groupId>net.kyori</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>text-adapter-bukkit</artifactId>
+			          <groupId>net.kyori</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>UltimateFancy</artifactId>
+			          <groupId>br.net.fabiozumbi12.UltimateChat</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>json-simple</artifactId>
+			          <groupId>com.googlecode.json-simple</groupId>
+			        </exclusion>
+	      		</exclusions>
+	        </dependency>
+	        <dependency>
+	            <groupId>net.ess3</groupId>
+	            <artifactId>EssentialsX</artifactId>
+	            <version>${massiveEssentialsVersion}</version>
+	            <scope>provided</scope>
+	            <exclusions>
+			        <exclusion>
+			          <artifactId>paperlib</artifactId>
+			          <groupId>io.papermc</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>NMSProvider</artifactId>
+			          <groupId>net.ess3</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>UpdatedMetaProvider</artifactId>
+			          <groupId>net.ess3</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>1_8_R1Provider</artifactId>
+			          <groupId>net.ess3</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>1_8_R2Provider</artifactId>
+			          <groupId>net.ess3</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>LegacyProvider</artifactId>
+			          <groupId>net.ess3</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>ReflectionProvider</artifactId>
+			          <groupId>net.ess3</groupId>
+			        </exclusion>
+			        <exclusion>
+			          <artifactId>FlattenedProvider</artifactId>
+			          <groupId>net.ess3</groupId>
+			        </exclusion>
+		      	</exclusions>
+	        </dependency>
             <!--<dependency>
               <groupId>me.lucko</groupId>
               <artifactId>commodore</artifactId>
