Added reload command. Added support for quick message functionality to main /f c command. Removed separate quick message command as it is now redundant.

--- a/FactionsChat/plugin.yml
+++ b/FactionsChat/plugin.yml
@@ -39,6 +39,9 @@ permissions:
   factionschat.staff:
     description: Access staff chat channel
     default: op
+  factionschat.reload:
+    description: Reload the plugin configuration file
+    default: op
 # -------------------------------------------- #
 # STAR NOTATION
 # -------------------------------------------- #
