--- a/FactionsChat/plugin.yml
+++ b/FactionsChat/plugin.yml
@@ -5,8 +5,8 @@ website: ${project.url}
 description: ${project.description}
 authors: [eirikh1996, Ymerejliaf]
 api-version: 1.21
-depend: [Factions, MassiveCore]
-softdepend: [DiscordSRV, Essentials]
+depend: [MassiveCore, Factions]
+softdepend: [DiscordSRV, Essentials, PlaceholderAPI]
 
 permissions:
   # -------------------------------------------- #
