--- a/Factions/plugin.yml
+++ b/Factions/plugin.yml
@@ -5,7 +5,7 @@ website: ${project.url}
 description: ${project.description}
 authors: [Madus, Cayorion, Ulumulu1510, MarkehMe, Brettflan, Ymerejliaf]
 depend: [MassiveCore]
-softdepend: [PermissionsEx, Permissions, Essentials, EssentialsChat, HeroChat, LocalAreaChat, LWC, ChatManager, AuthMe, Vault, WorldEdit, WorldGuard]
+softdepend: [Dynamp, Essentials, LWC, PlaceholderAPI, Vault, WorldEdit, WorldGuard]
 api-version: 1.21
 permissions:
   # -------------------------------------------- #
