--- a/FactionsChat/config.yml
+++ b/FactionsChat/config.yml
@@ -13,11 +13,11 @@ version: 1
 # Chat-related settings not specific to any channel
 ChatSettings:
   # The chat format for all messages. Supports PlaceholderAPI placeholders if PAPI is installed.
-  # Also supports color codes (ampersand or section sign).
+  # Also supports color codes (ampersand or section sign, including hex codes).
   #
   # See the wiki for a list of built-in/supported tags and for more details:
   # https://github.com/JeremyFail/MassiveCraft/wiki/FactionsChat#configuration
-  ChatFormat: '%factions_chat_prefix% &f<%rel_factions_relation_color%%factions_player_rankprefix%%factions_faction_name% &r%DISPLAYNAME%> %factions_chat_color%%MESSAGE%'
+  ChatFormat: '%factions_chat_prefix% &r&f<%rel_factions_relation_color%%factions_player_rankprefix%%factions_faction_name% &r%DISPLAYNAME%> %factions_chat_color%%MESSAGE%'
   # If true, allows color codes/formatting in chat messages (if players also have permission to use them)
   AllowColorCodes: true
   # If true, allows clickable links in chat messages (if players also have permission to send them)
@@ -32,18 +32,18 @@ ChatSettings:
 #---------------- Prefix Settings ----------------#
 # Chat prefixes for each channel - controls what is displayed in the %factions_chat_prefix% placeholder.
 # <fcolor> is a placeholder for the faction colors set in the factions config files
-# Supports legacy color/format codes using the section sign (§)
+# Supports color/format codes or hex codes using the section sign (§) or ampersand (&). See the wiki for details.
 # NOTE: This prefix will not actually be used in the message text unless the %factions_chat_prefix% placeholder is used.
 ChatPrefixes:
-  Ally: '§e[<fcolor>ALLY§e]§r '
-  Truce: '§e[<fcolor>TRUCE§e]§r '
-  Faction: '§e[<fcolor>FACTION§e]§r '
-  Enemy: '§e[<fcolor>ENEMY§e]§r '
-  Neutral: '§e[<fcolor>NEUTRAL§e]§r '
-  Local: '§e[§rLOCAL§e]§r '
-  Global: '§e[§6GLOBAL§e]§r '
-  Staff: '§e[§4STAFF§e]§r '
-  World: '§e[§3WORLD§e]§r '
+  Ally: '§e[<fcolor>ALLY§e]§r'
+  Truce: '§e[<fcolor>TRUCE§e]§r'
+  Faction: '§e[<fcolor>FACTION§e]§r'
+  Enemy: '§e[<fcolor>ENEMY§e]§r'
+  Neutral: '§e[<fcolor>NEUTRAL§e]§r'
+  Local: '§e[§rLOCAL§e]§r'
+  Global: '§e[§6GLOBAL§e]§r'
+  Staff: '§e[§4STAFF§e]§r'
+  World: '§e[§3WORLD§e]§r'
 
 
 
