MC-45 Implementing chat modifier support to fix issues with empty spaces in chat formats. Updating default format to accommodate. Fixing FactionsChat Placeholder API integration and updating Factions Placeholder API integration to support the fixes.

--- a/FactionsChat/config.yml
+++ b/FactionsChat/config.yml
@@ -11,13 +11,16 @@ version: 1
 
 #----------------- Chat Settings -----------------#
 # Chat-related settings not specific to any channel
+# https://github.com/JeremyFail/MassiveCraft/wiki/FactionsChat#configuration
 ChatSettings:
   # The chat format for all messages. Supports PlaceholderAPI placeholders if PAPI is installed.
-  # Also supports color codes (ampersand or section sign, including hex codes).
+  # Supports color codes (ampersand or section sign, including hex codes).
+  # Also supports modifiers such as |rp (right padding) or |lp (left padding), which 
+  # conditionally add right/left padding (a space) if the placeholder is not empty.
   #
-  # See the wiki for a list of built-in/supported tags and for more details:
-  # https://github.com/JeremyFail/MassiveCraft/wiki/FactionsChat#configuration
-  ChatFormat: '%factions_chat_prefix% &r&f<%rel_factions_relation_color%%factions_player_rankprefix%%factions_faction_name% &r%DISPLAYNAME%> %factions_chat_color%%MESSAGE%'
+  # See the wiki for a list of built-in/supported tags, list of modifiers, and for more details:
+  # https://github.com/JeremyFail/MassiveCraft/wiki/FactionsChat#placeholders
+  ChatFormat: '%factions_chat_prefix|rp%&r<%rel_factions_relation_color%%factions_player_rankprefix%%factions_faction_name|rp%&r%DISPLAYNAME%> %factions_chat_color%%MESSAGE%'
   # If true, allows color codes/formatting in chat messages (if players also have permission to use them)
   AllowColorCodes: true
   # If true, allows clickable links in chat messages (if players also have permission to send them)
