--- a/MassiveCore/pom.xml
+++ b/MassiveCore/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.massivecraft.massivesuper</groupId>
         <artifactId>MassiveSuper</artifactId>
-        <version>3.4.0-alpha-6</version>
+        <version>3.4.0-alpha-7</version>
         <relativePath>../MassiveSuper</relativePath>
     </parent>
 
@@ -88,6 +88,9 @@
             <resource>
                 <directory>${project.build.sourceDirectory}</directory>
                 <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
             </resource>
             <!-- Sponsor Disable Code -->
             <resource>
