--- a/MassiveSuper/pom.xml
+++ b/MassiveSuper/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.massivecraft.massivesuper</groupId>
     <artifactId>MassiveSuper</artifactId>
     <!-- Change this release version when making updates to the code - update in all pom files -->
-    <version>3.4.0-alpha-6</version>
+    <version>3.4.0-alpha-7</version>
     <packaging>pom</packaging>
 
     <!-- Info -->
@@ -216,12 +216,27 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>${massiveMavenJarPluginVersion}</version>
+                    <configuration>
+                        <excludes>
+                            <exclude>*.java</exclude>
+                        </excludes>
+                    </configuration>
                 </plugin>
                 <!-- Shade -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
                     <version>${massiveMavenShadePluginVersion}</version>
+                    <configuration>
+                        <filters>
+                            <filter>
+                                <artifact>*:*</artifact>
+                                <excludes>
+                                    <exclude>*.java</exclude>
+                                </excludes>
+                            </filter>
+                        </filters>
+                    </configuration>
                 </plugin>
                 <!-- ProGuard -->
                 <plugin>
