MC-63 Adding new option to disable usage in specified worlds. Adding permission to bypass that option.

--- a/CreativeGates/plugin.yml
+++ b/CreativeGates/plugin.yml
@@ -11,6 +11,7 @@ permissions:
 # THE REAL NODES
 # -------------------------------------------- #
   creativegates.create: {description: create a gate, default: false}
+  creativegates.create.bypassdisabled: {description: bypass disabled worlds for gate creation, default: false}
   creativegates.use: {description: use a gate, default: false}
   creativegates.cg: {description: use creativegates base command, default: false}
   creativegates.cg.world: {description: world gate management, default: false}
