MC-61 Updating base URL

--- a/CreativeGates/plugin.yml
+++ b/CreativeGates/plugin.yml
@@ -3,7 +3,7 @@ name: ${project.name}
 version: ${project.version}
 website: ${project.url}
 description: ${project.description}
-authors: [Cayorion, Madus, Ulumulu1510, Ymerejliaf]
+authors: [Ymerejliaf, Madus, Cayorion, Ulumulu1510]
 depend: [MassiveCore]
 api-version: 1.21
 permissions:
