MC-89 Further improvements to dynmap integration

--- a/Factions/plugin.yml
+++ b/Factions/plugin.yml
@@ -34,6 +34,13 @@ permissions:
   factions.claim.square: {description: claim by square and radius, default: false}
   factions.claim.circle: {description: claim by circle and radius, default: false}
   factions.claim.all: {description: claim all faction land, default: false}
+  factions.color: {description: manage faction colors, default: false}
+  factions.color.set: {description: set faction colors, default: false}
+  factions.color.set.primary: {description: set primary faction color, default: false}
+  factions.color.set.secondary: {description: set secondary faction color, default: false}
+  factions.color.show: {description: show faction colors, default: false}
+  factions.color.show.primary: {description: show primary faction color, default: false}
+  factions.color.show.secondary: {description: show secondary faction color, default: false}
   factions.create: {description: create new faction, default: false}
   factions.description: {description: change faction description, default: false}
   factions.disband: {description: disband faction, default: false}
@@ -171,6 +178,13 @@ permissions:
       factions.claim.square: true
       factions.claim.circle: true
       factions.claim.all: true
+      factions.color: true
+      factions.color.set: true
+      factions.color.set.primary: true
+      factions.color.set.secondary: true
+      factions.color.show: true
+      factions.color.show.primary: true
+      factions.color.show.secondary: true
       factions.create: true
       factions.demote: true
       factions.description: true
@@ -352,6 +366,13 @@ permissions:
       factions.claim.square: true
       factions.claim.circle: true
       factions.claim.all: true
+      factions.color: true
+      factions.color.set: true
+      factions.color.set.primary: true
+      factions.color.set.secondary: true
+      factions.color.show: true
+      factions.color.show.primary: true
+      factions.color.show.secondary: true
       factions.create: true
       factions.demote: true
       factions.description: true
