--- a/Factions/plugin.yml
+++ b/Factions/plugin.yml
@@ -5,7 +5,7 @@ website: ${project.url}
 description: ${project.description}
 authors: [Ymerejliaf, Madus, Cayorion, Ulumulu1510, MarkehMe, Brettflan]
 depend: [MassiveCore]
-softdepend: [Dynamp, Essentials, LWC, PlaceholderAPI, Vault, WorldEdit, WorldGuard]
+softdepend: [BlueMap, Dynmap, Essentials, LWC, PlaceholderAPI, Vault, WorldEdit, WorldGuard]
 api-version: 1.21
 permissions:
   # -------------------------------------------- #
