--- a/MassiveSuper/pom.xml
+++ b/MassiveSuper/pom.xml
@@ -81,6 +81,9 @@
         <!-- https://repo.bluecolored.de/ -->
         <massiveBlueMapVersion>2.7.7</massiveBlueMapVersion>
 
+        <!-- https://central.sonatype.com/artifact/xyz.jpenilla/squaremap-api -->
+        <massiveSquareMapVersion>1.3.12</massiveSquareMapVersion>
+
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
         <!-- MANUAL DOWNLOADS REQUIRED -->
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -461,6 +464,12 @@
                 <groupId>de.bluecolored</groupId>
                 <artifactId>bluemap-api</artifactId>
                 <version>${massiveBlueMapVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>xyz.jpenilla</groupId>
+                <artifactId>squaremap-api</artifactId>
+                <version>${massiveSquareMapVersion}</version>
                 <scope>provided</scope>
             </dependency>
 
